# Software-de-autoclave

./: AutoclaveUI.spec  autoclave_vapor.db  handoff.md  installation_profile.json  listar_puertos.py  pyproject.toml  requirements.lock.txt
.claude/: settings.local.json
Documentacion/: DOC_Backend_Arquitectura_API_Servicios.docx  DOC_CICLO_Fases_Proceso_v1.docx  DOC_Capa_Interfaz_Hardware.docx  DOC_Conversion_ADC_Valores_Fisicos.docx  DOC_Dispositivos_Sistema_Puertas.docx  DOC_Maquina_Estados_Global.docx
Hadware/: Comunocacion_esclava_ESP32_V2.ino
Hadware/Comunocacion_esclava_ESP32_V2/: Comunicacion_esclava_ESP32_V2.ino  Comunocacion_esclava_ESP32_V2.ino
data/: autoclave.db  autoclave.db-shm  autoclave.db-wal
docs/superpowers/plans/: 2026-05-24-installation-wizard.md  2026-05-24-temporal-codes.md  2026-05-25-purga-impl.md  (+5 more)
src/autoclave/: app.py
src/autoclave.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: Interfaz.py  test_activation.py  test_advanced_door_safe_mode.py  test_calentamiento_fase.py  test_ciclo_sensores.py  test_ciclo_suministro.py  test_clock_guard.py  test_config.py  test_converters_realistic.py  test_door_from_profile.py  test_enviar_comando.py  test_estabilizacion_fase.py  test_esterilizacion_fase.py  test_flujo_unidades.py  test_precalentamiento_fase.py  test_preparado_suministro.py  test_profile_validation.py  test_pump.py  test_purga_fase.py  test_rutas.py  test_serial_directo.py  test_steam.py  test_suministro_electrico.py  test_ui_layout.py  ventana_emergente.py
tools/generador/: app.py
(+115 files in other folders)
